docs/0.18.1/_sources/api/gammapy.modeling.Parameter.rst.txt
Parameter
=========

.. currentmodule:: gammapy.modeling

.. autoclass:: Parameter
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Parameter.error
      ~Parameter.factor
      ~Parameter.factor_max
      ~Parameter.factor_min
      ~Parameter.frozen
      ~Parameter.max
      ~Parameter.min
      ~Parameter.name
      ~Parameter.quantity
      ~Parameter.scale
      ~Parameter.type
      ~Parameter.unit
      ~Parameter.value

   .. rubric:: Methods Summary

   .. autosummary::

      ~Parameter.autoscale
      ~Parameter.check_limits
      ~Parameter.copy
      ~Parameter.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: error
   .. autoattribute:: factor
   .. autoattribute:: factor_max
   .. autoattribute:: factor_min
   .. autoattribute:: frozen
   .. autoattribute:: max
   .. autoattribute:: min
   .. autoattribute:: name
   .. autoattribute:: quantity
   .. autoattribute:: scale
   .. autoattribute:: type
   .. autoattribute:: unit
   .. autoattribute:: value

   .. rubric:: Methods Documentation

   .. automethod:: autoscale
   .. automethod:: check_limits
   .. automethod:: copy
   .. automethod:: to_dict
